# Basic-PiNN-Model-For-Three-Layered-Collision

./: README.md  compare_results.py  data.py  diagnostic_report.md  diagnostics.py  loss_history.npy  physics.py  pinn_model.pth  plot.py  pyproject.toml  train.py
.agent/workflows/: pinn_vs_fea_benchmark.md
configs/: default.yaml
data/: README.md
fea-workflow/: README.md
fea-workflow/configs/: default.yaml
fea-workflow/geometry/: README.md
fea-workflow/postprocessing/: README.md  visualization.py
fea-workflow/postprocessing/outputs/: fea_diagnostics.txt
fea-workflow/scripts/: README.md  run_collision.py  run_workflow.py  trajectory.npy
fea-workflow/solver/: README.md  explicit_dynamics.py  fem_solver.py  models.py  pinn_physics.py
notebooks/: README.md
outputs/: README.md
pinn-workflow/: config.py  data.py  fea_solution.npy  model.py  physics.py  pinn_config.py  pinn_config_parallel.py  plot.py  train.py  train_colab.ipynb  train_parallel.py
src/: __init__.py
src/geometry/: __init__.py  domain.py  sampling.py
src/models/: __init__.py  mlp.py
src/physics/: __init__.py  elasticity.py
src/training/: __init__.py  loop.py  losses.py
src/utils/: __init__.py  logging.py
tests/: README.md
